--- a/style.css
+++ b/style.css
@@ -1,9 +1,59 @@
+      body {
+      margin:0;
+      font-family: 'Poiret One', cursive;
+       background-image: url('background.png');
+      color: black;
+      text-align: left;
+      font-size: 20px
+    }
+
+
+ button {
+  color: red;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 5px;
+ }
+.calculator {
+
+  text-align: center;
+
+}
+.title {
+  text-align:center;
+}
+.header {
+  background-image: url('cover.jpg');
+  background-size: cover;
+}
+.menu{
+  background-color: black;
+}
+.content{
+  font-family: sans-serif;
+  font-weight: bolder;
+  width: 900px;
+  margin: auto;
+}
+@media screen and (max-width: 900px) {
+.content{
+  width: 100%;
+}
+}
+
+
+.footer {
+    clear: both;
+    text-align: center;
+}
+
 ul.topnav {
+     
+      width: 900px;
       list-style-type: none;
-      margin: 0;
+      margin: auto;
       padding: 0;
       overflow: hidden;
-      background-color: #333;
     }
 
     ul.topnav li {float: left;}
@@ -22,57 +72,19 @@ ul.topnav {
 
     ul.topnav li.icon {display: none;}
 
-    @media screen and (max-width:680px) {
-      ul.topnav li:not(:first-child) {display: none;}
-      ul.topnav li.icon {
-        float: right;
-        display: inline-block;
-      }
-    }
 
-    @media screen and (max-width:680px) {
-      ul.topnav.responsive {position: relative;}
-      ul.topnav.responsive li.icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-      }
-      ul.topnav.responsive li {
-        float: none;
-        display: inline;
-      }
-      ul.topnav.responsive li a {
-        display: block;
-        text-align: left;
-      }
-    }
-    	body {
-      margin:0;
-  		font-family: 'Poiret One', cursive;
-  		background: #F6F6C2;
-  		color: dimgray;
-  		text-align: left;
-  		padding-left: 100px;
-  		padding-right: 100px;
-      font-size: 20px
-  	}
+
+
   	#list {
   		float: left;
   		width: 400px;
   	}
   	#chart {
   		float: left;
-  		height: 400px;
+  		height: 300px;
   		width: 400px;
   	}
-    #footer {
-    clear: both;
-    position: relative;
-    z-index: 10;
-    height: 3em;
-    margin-top: -3em;
-    color: #a6a6a6;
-    }
+
   	/* CSS for text inside chart; text tag will be used inside the chart*/
     text {
   		fill: black !important;
